dockerfile with multi build